<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="foodzu.in.HomeActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/home"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_refresh"
        android:visible="true"/>
    <item
        android:id="@+id/action_More"
        android:icon="@drawable/dot"
        android:showAsAction="always"
        android:title=""/>
    <item
        android:id="@+id/action_MyCart"
        android:icon="@drawable/cart"
        android:showAsAction="never"
        android:title="@string/action_MyCart"
        android:visible="false"/>
    <item
        android:id="@+id/action_favorite"
        android:showAsAction="never"
        android:title="@string/action_favorite"/>
    <item
        android:id="@+id/action_orders"
        android:icon="@drawable/login"
        android:showAsAction="never"
        android:title="@string/action_orders"/>
    <item
        android:id="@+id/action_profile"
        android:showAsAction="never"
        android:title="@string/action_profile"/>
    <item
        android:id="@+id/action_Aboutus"
        android:showAsAction="never"
        android:title="@string/action_Aboutus"/>
    <item
        android:id="@+id/action_share"
        android:showAsAction="never"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_Logout"
        android:icon="@drawable/cart"
        android:showAsAction="never"
        android:title="@string/action_Logout"/>
    <item
        android:id="@+id/action_SignUp"
        android:icon="@drawable/signup"
        android:showAsAction="never"
        android:title="@string/action_SignUp"
        android:visible="false"/>

</menu>