<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/login_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Login_message"
            android:textColor="@color/foodzu_green"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/green_round_border"
            android:orientation="vertical"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/etusername"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_toLeftOf="@+id/imageView1"
                        android:background="@android:color/transparent"
                        android:ellipsize="start"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:hint="Enter Username"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginRight="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/username" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/foodzu_green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/etpassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_toLeftOf="@+id/imageView2"
                        android:background="@android:color/transparent"
                        android:ellipsize="start"
                        android:gravity="center"
                        android:hint="Enter Password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/password" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/foodzu_green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/chk_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/tvtermscondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/show_password"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/green_round_border"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="5dp"
                    android:text="Sign Up"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/apptheme_btn_default_holo_light"
                    android:padding="10dp"
                    android:text="Login"
                    android:textColor="@color/text_btn" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="21dp"
                android:text="Forgot Password?"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/grey"
            android:visibility="gone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:gravity="center"
            android:text="or"
            android:textColor="@color/foodzu_green"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/facebook_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:contentDescription="facebook_icon"
                android:src="@drawable/facebook_login" />

            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:contentDescription="google_icon"
                android:src="@drawable/g_login" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>